2004-02-09  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-handle-dired-compress-file): Added XEmacs
	implementation.
	(tramp-handle-dired-compress-file-for-emacs)
	(tramp-handle-dired-compress-file-for-xemacs): Not needed
	anymore.  Implementation not so different as expected.

2004-02-08  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-file-name-handler-alist): Add
	`dired-compress-file' entry.
	(tramp-handle-dired-compress-file)
	(tramp-handle-dired-compress-file-for-emacs)
	(tramp-handle-dired-compress-file-for-xemacs): New functions.
	`tramp-handle-dired-compress-file-for-xemacs' not implemented yet.

2004-01-24  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-ftp.el (tramp-ftp-file-name-handler): Unset
	`ange-ftp-ftp-name-arg' and `ange-ftp-ftp-name-res'.  There could
	be incorrect values from previous calls in case the "ftp" method
	is used in the Tramp file name.  Reported by Katsumi Yamaoka
	<yamaoka@jpl.org>.

2004-01-22  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-completion-function-alist-ssh): Add
	`tramp-parse-shostkeys' and `tramp-parse-sknownhosts'.
	(tramp-completion-function-alist): It's a defvar now, because we
	want to apply the optimized `tramp-set-completion-function'
	instead of a static list.
	(tramp-set-completion-function): Implementation tuned.  Avoid
	double entries, and entries where the function or the
	file/directory doesn' exist.
	(tramp-parse-shostkeys, tramp-parse-sknownhosts): New functions
	for SSH2.

2004-01-18  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-do-copy-or-rename-file): Handle out-of-band
	methods.  Call `tramp-do-copy-or-rename-file-out-of-band' this
	case.
	(tramp-do-copy-or-rename-file-out-of-band): Renamed from
	`tramp-do-copy-or-rename-file-one-local', because it handles also
	the case both files use the same out-of-band method.
	Implementation added.
	(tramp-handle-file-local-copy, tramp-handle-write-region):